Session 3 - Kubernetes Networking - Networking Yaml files/ClusterFirstWithHostNet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-clusterfirstwithhostnet
  namespace: default
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
