Session 3 - Kubernetes Networking - Networking Yaml files/dnsPolicyNone.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: busybox-dnsnone
spec:
  containers:
    - name: test
      image: nginx
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 192.0.2.1 # this is an example
    searches:
      - ns1.svc.cluster-domain.example
      - my.dns.search.suffix
    options:
      - name: ndots
        value: "2"
      - name: edns0
